Enhance index.html structure and styling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Baniya Buddy - Sales Tracking & Billing App</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 20px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #ff6f00;
+        }
+        p {
+            font-size: 18px;
+        }
+        .features {
+            text-align: left;
+            margin-top: 20px;
+        }
+        .features li {
+            margin: 10px 0;
+        }
+        .download-btn {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 18px;
+            color: white;
+            background-color: #28a745;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .download-btn:hover {
+            background-color: #218838;
+        }
+        .footer {
+            margin-top: 30px;
+            font-size: 14px;
+            color: #666;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello from my new GitHub Pages site!</h1>
+
+    <div class="container">
+        <h1>Baniya Buddy</h1>
+        <p><strong>Your Sales Tracking & Billing Partner!</strong></p>
+        <p>Baniya Buddy helps small businesses and shopkeepers manage udhaar, track payments, create bills, and stay organized — all in one simple app.</p>
+
+        <h2>✨ Features:</h2>
+        <ul class="features">
+            <li>📘 Easy Udhaar Management</li>
+            <li>🧾 Simple Billing & Invoice Creation</li>
+            <li>💾 Local Storage (Works Offline)</li>
+            <li>🔔 Payment Reminders</li>
+            <li>📤 Share Bills via WhatsApp & Email</li>
+            <li>📊 Track Customer Balance</li>
+        </ul>
+
+        <a href="https://play.google.com/store/apps/details?id=com.infinitycodeworks.baniyabuddy" class="download-btn" target="_blank">
+            📥 Download on Play Store
+        </a>
+
+        <p class="footer">© 2025 Baniya Buddy. All Rights Reserved.</p>
+    </div>
+
 </body>
 </html>
